Package "handlers" split. Swagger docs update
