# docs/swagger.json
@@ -52,7 +52,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handlers.Song"
+                                "$ref": "#/definitions/models.Song"
                             }
                         }
                     },
@@ -83,7 +83,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.AddSongRequest"
+                            "$ref": "#/definitions/models.AddSongRequest"
                         }
                     }
                 ],
@@ -91,7 +91,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Song"
+                            "$ref": "#/definitions/models.Song"
                         }
                     },
                     "400": {
@@ -138,7 +138,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Song"
+                            "$ref": "#/definitions/models.Song"
                         }
                     },
                     "400": {
@@ -181,7 +181,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.Song"
+                            "$ref": "#/definitions/models.Song"
                         }
                     }
                 ],
@@ -260,7 +260,7 @@
         }
     },
     "definitions": {
-        "handlers.AddSongRequest": {
+        "models.AddSongRequest": {
             "type": "object",
             "properties": {
                 "group": {
@@ -273,7 +273,7 @@
                 }
             }
         },
-        "handlers.Song": {
+        "models.Song": {
             "type": "object",
             "properties": {
                 "group_name": {
